--- a/views/showemp.ejs
+++ b/views/showemp.ejs
@@ -118,7 +118,7 @@
 
 <body>
         <h1>Employee Details</h1>
-        <a href="/employee/submit-form" class="add-btn"><i class="fas fa-user-plus"></i> Add Employee</a>
+        <a href="/submit-form" class="add-btn"><i class="fas fa-user-plus"></i> Add Employee</a>
         
         <% if (employees && employees.length > 0) { %>
             <table border="1">
