changes in routes

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -143,7 +143,7 @@
     <h1></h1>
     <div class="form-container">
         <h2>Employee Information</h2>
-        <form id="employeeForm" action="http://localhost:2500/submit-form" method="POST"
+        <form id="employeeForm" action="/submit-form" method="POST"
             enctype="multipart/form-data" onsubmit="return validateForm() && checkduplicate()">
             <!-- Form Fields -->
             <label for="employee_id">Employee ID:</label>
