changes in images

--- a/views/showemp.ejs
+++ b/views/showemp.ejs
@@ -149,7 +149,7 @@
                             <td>
                                 <% if (employee.profile && employee.profile.trim() !== '') { %>
                                     <img 
-                                        src="http://localhost:2500/<%= employee.profile %>" 
+                                        src="/<%= employee.profile %>" 
                                         width="100" 
                                         height="100" 
                                         alt="Profile Image" 
